# evotracex

./: .gitignore  README.md  pyproject.toml
demo/: sample.fasta  sample.nwk  sample_et_ranking.tsv  sample_marginal.tsv
evotracex/: alignment.py  cli.py  constants.py  marginal.py  output.py  scoring.py  subsets.py  tree.py
tests/: conftest.py  test_alignment.py  test_cli.py  test_marginal.py  test_scoring.py  test_subsets.py
